app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-recognition
  labels:
    name: image-recognition
    app: image-recognition-app
