app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-recognition-service
  labels:
    app: image-recognition-app
spec:
  selector:
    app: image-recognition-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
