app/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: image-recognition-route
  labels:
    app: image-recognition-app
spec:
  to:
    kind: Service
    name: image-recognition-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
